--- a/style.css
+++ b/style.css
@@ -154,3 +154,25 @@ nav{
 .header-box{
     margin-top: -20vw;
 }
+.products-slider{
+    background-color: #fff;
+    margin: 0 30px;
+    padding: 20px;
+    margin-bottom: 15px;
+
+}
+.products{
+    display: flex;
+    overflow: auto;
+    /* gap: 20px; */
+    margin-top: 10px;
+
+
+}
+.products img{
+    max-width: 200px;
+    max-height: 200;
+}
+.products-slider .products ::-webkit-scrollbar{
+    display: none;
+}
