--- a/style.css
+++ b/style.css
@@ -164,15 +164,62 @@ nav{
 .products{
     display: flex;
     overflow: auto;
-    /* gap: 20px; */
+    /* gap: 10px; */
     margin-top: 10px;
 
 
 }
 .products img{
     max-width: 200px;
-    max-height: 200;
+    max-height: 200px;
 }
 .products-slider .products ::-webkit-scrollbar{
     display: none;
+}
+.product-slider-with-price{
+    background: #fff;
+    margin: 0 30px;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+
+.product-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    min-width: 210px;
+    background-color: #fbfbfb;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.product-card img{
+    width: 110px;
+    margin: 0 50px;
+}
+.product-offer p{
+    background-color: #be0b3b;
+    color: #fff;
+    display: inline-block;
+    padding: 2px 5px;
+    border-radius: 2px;
+    margin: 8px 0;
+    font-size: 13px;
+}
+.product-price{
+    color: grey;
+    font-size: 13px;
+}
+.product-card h4{
+    color: #525252;
+    font-size: 15px;
+    font-weight: 400;
+}
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    background-color: #131921;
+    padding: 20px 60px;
 }
