--- a/product.css
+++ b/product.css
@@ -27,3 +27,39 @@ body{
     padding: 5px ;
     
 }
+.product-d-detail{
+    margin: 0 30px;
+
+}
+.product-title{
+    font-size: 25px;
+
+}
+.brand-store{
+    margin-top: 5px;
+    color: #007185;
+    font-size:  14px;
+}
+.product-rating{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.product-rating div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.product-rating p{
+    color: #007185;
+}
+.product-rating p span{
+    color: #fff;
+    background-color: #c73500;
+    padding: 2px 50px;
+    border-radius: 3px;
+}
+.product-rating h5 {
+    font-weight: 400;
+    margin: 10px 10px;
+}
